# RWStats

./: CMakeLists.txt  LICENSE  README.md  demo_plot.py  main_demo.cpp  rolling_stats_plot.py
cmake/: SourcesAndHeaders.cmake
include/: CMakeLists.txt  rolling_stats.h  rw_stats.h
tests/: CMakeLists.txt  ut_rolling_stats.cpp
